@@ -1,17 +1,16 @@
 package xsbt.boot
 
-import java.io.{File,InputStream}
+import java.io.{ File, InputStream }
 import java.net.URL
 import java.util.Properties
 import xsbti._
 import org.specs2._
 import mutable.Specification
 import LaunchTest._
-import sbt.IO.{createDirectory, touch,withTemporaryDirectory}
+import sbt.IO.{ createDirectory, touch, withTemporaryDirectory }
 import java.net.URI
 
-object ServerLocatorTest extends Specification
-{
+object ServerLocatorTest extends Specification {
   "ServerLocator" should {
     // TODO - Maybe use scalacheck to randomnly generate URIs
     "read and write server URI properties" in {
@@ -46,8 +45,45 @@ object ServerLocatorTest extends Specification
                       |Some more output.""".stripMargin
       val inputStream = new java.io.BufferedReader(new java.io.StringReader(input))
       val result = try ServerLauncher.readUntilSynch(inputStream)
-                   finally inputStream.close()
+      finally inputStream.close()
       result must equalTo(Some(expected))
+    }
+    "determine a JVM version" in {
+      withTemporaryDirectory { dir =>
+        // javaIs8OrAbove returns None for pathological situations
+        // (weird errors running java -version or something),
+        // but when testing sbt we should not be in such a situation.
+        val determined = ServerLauncher.javaIsAbove(dir, 7)
+        determined must beSome
+      }
+    }
+    "have JVM memory defaults" in {
+      withTemporaryDirectory { dir =>
+        val defaults = ServerLauncher.serverJvmArgs(dir, Nil)
+        defaults must contain(beEqualTo("-Xms256m"))
+        defaults must contain(beEqualTo("-Xmx1024m"))
+        if (ServerLauncher.javaIsAbove(dir, 7).getOrElse(false)) {
+          defaults must contain(beEqualTo("-XX:MetaspaceSize=64m"))
+          defaults must contain(beEqualTo("-XX:MaxMetaspaceSize=256m"))
+        } else {
+          defaults must contain(beEqualTo("-XX:PermSize=64m"))
+          defaults must contain(beEqualTo("-XX:MaxPermSize=256m"))
+        }
+      }
+    }
+    "leave user-specified memory options alone" in {
+      withTemporaryDirectory { dir =>
+        val args = ServerLauncher.serverJvmArgs(dir, List("-Xmx4321m"))
+        args must contain(beEqualTo("-Xmx4321m"))
+        args must not contain (beEqualTo("-Xms256m"))
+        args must not contain (beEqualTo("-Xmx1024m"))
+      }
+    }
+    "ignore whitespace in jvm args file" in {
+      withTemporaryDirectory { dir =>
+        val args = ServerLauncher.serverJvmArgs(dir, List("", "   ", "  -Xmx4321m  ", "  ", ""))
+        args must equalTo(List("-Xmx4321m"))
+      }
     }
   }
 }
